# feathernet

./: .coveragerc_compiler  .coveragerc_dl  .flake8  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compute_kernel.cu  pyproject.toml  requirements.txt  self_hosted.sh
.github/workflows/: ci.yml  main.yml
examples/: moons.py
feathernet/: executor.py  tensor.py  tensor_utils.py
feathernet/common/: enums.py  types.py
feathernet/compiler/: __init__.py  fusion.py  fusion_graph.py  ir.py  ir_base.py  utils.py
feathernet/compiler/codegen/: __init__.py  codegen.py  executor.py  utils.py
feathernet/compiler/graph_opt/: __init__.py  base.py  fusion.py  pruning.py  quantization.py
feathernet/dl/: initializers.py  losses.py  metrics.py  network.py  optimizers.py  utils.py
feathernet/dl/layers/: __init__.py  activations.py  base.py  convolution.py  core.py  pooling.py
feathernet/frontend/: __init__.py  data_loader.py  executor.py  model_interface.py
feathernet/gpu/: gpu_ops.py  kernel_manager.py
feathernet/ir/: core.py  cpu_ops.py  dispatch_tables.py  ops.py
feathernet/ops/: basic.py
feathernet/translator/: handlers.py  ir_nodes.py  main.py  registry.py  translators.py
tests/: test_arithmetic_ops_codegen.py  test_tensor.py  test_tensor_ops.py
tests/compiler/: test_codegen.py  test_graph_opt.py  test_ir.py  test_model_reading.py
tests/dl/: test_cnn_mnist.py  test_initializers.py  test_layers.py  test_optimizers.py  test_simple_nn.py  test_utils.py
tests/utils/: dataset.py
(+16 files in other folders)
