[tool.poetry]
name = "feathernet"
version = "0.1.0"
description = ""
authors = ["Camille Dunning <dunningcamille@gmail.com>"]
readme = "README.md"
packages = [{include = "feathernet"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
pandas = "^2.1.4"
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
