[tool.poetry]
name = "feathernet"
version = "0.1.0"
description = ""
authors = ["Camille Dunning <dunningcamille@gmail.com>"]
readme = "README.md"
packages = [{include = "feathernet"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
pandas = "^2.1.4"
scipy = "^1.11.4"
tqdm = "^4.66.1"
pycuda = "^2024.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
coverage = "^7.3.3"

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
